unpackaged/main/default/objects/DSCORGPKG__FieldMapping__c/DSCORGPKG__FieldMapping__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Field Mapping</label>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>