unpackaged/main/default/objects/DSCORGPKG__FieldMapping__c/fields/DSCORGPKG__CriteriaField1Value__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__CriteriaField1Value__c</fullName>
    <inlineHelpText>The value you wish to match on the object record for the first matching criteria.</inlineHelpText>
    <label>Criteria Field 1 Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>