unpackaged/main/default/objects/DSCORGPKG__FieldMapping__c/fields/DSCORGPKG__CriteriaField2APIName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__CriteriaField2APIName__c</fullName>
    <inlineHelpText>The API name of the second field to be used to match against.</inlineHelpText>
    <label>Criteria Field 2 API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>