unpackaged/main/default/objects/DSCORGPKG__FieldMapping__c/fields/DSCORGPKG__CriteriaField2Value__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__CriteriaField2Value__c</fullName>
    <inlineHelpText>The value you wish to match on the object record for the second matching criteria.</inlineHelpText>
    <label>Criteria Field 2 Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>