unpackaged/main/default/objects/DSCORGPKG__FieldMapping__c/fields/DSCORGPKG__FieldName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__FieldName__c</fullName>
    <inlineHelpText>The API name of the field you wish to be updated with the new field value.</inlineHelpText>
    <label>Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>